# packages/app/app/studio/[organization]/(no-side-bar)/editor/types.ts
@@ -1,24 +1,0 @@
-export interface EditorEvent {
-  id: string;
-  label: string;
-  type: 'media';
-  url: string;
-  duration: number;
-  fps: number;
-  transcript?: Transcript;
-  start: number;
-  end: number;
-  timeLineStart: number;
-  timeLineEnd: number;
-}
-
-export interface Transcript {
-  language: string;
-  duration: number;
-  text: string;
-  words: {
-    word: string;
-    start: number;
-    end: number;
-  }[];
-}
