# packages/server/src/controllers/index.controller.ts
@@ -2,8 +2,9 @@ import { HttpException } from '@exceptions/HttpException';
 import { ClipEditorStatus } from '@interfaces/clip.editor.interface';
 import { LivepeerEvent } from '@interfaces/livepeer.interface';
 import { RemotionPayload } from '@interfaces/remotion.webhook.interface';
-import { ProcessingStatus, SessionType } from '@interfaces/session.interface';
-import { StateStatus, StateType } from '@interfaces/state.interface';
+import { SessionType } from '@interfaces/session.interface';
+import { StateStatus } from '@interfaces/state.interface';
+import { ProcessingStatus } from '@interfaces/state.interface';
 import ClipEditor from '@models/clip.editor.model';
 import Session from '@models/session.model';
 import SessionService from '@services/session.service';
