# packages/server/src/controllers/session.controller.ts
@@ -2,7 +2,8 @@ import { OrgIdDto } from '@dtos/organization/orgid.dto';
 import { CreateSessionDto } from '@dtos/session/create-session.dto';
 import { UpdateSessionDto } from '@dtos/session/update-session.dto';
 import { UploadSessionDto } from '@dtos/session/upload-session.dto';
-import { ISession, ProcessingStatus } from '@interfaces/session.interface';
+import { ISession } from '@interfaces/session.interface';
+import { ProcessingStatus } from '@interfaces/state.interface';
 import clipEditorService from '@services/clipEditor.service';
 import SessionServcie from '@services/session.service';
 import { IStandardResponse, SendApiResponse } from '@utils/api.response';
