# packages/server/src/interfaces/stage.interface.ts
@@ -1,5 +1,5 @@
 import { Document, Types } from 'mongoose';
-import { TranscriptionStatus } from './state.interface';
+import { IAiAnalysis, ITranscript } from './transcribe.interface';
 export interface TargetOutput {
   _id?: string;
   id?: string;
@@ -54,17 +54,8 @@ export class IStage {
   nftCollections?: Types.ObjectId | string[];
   recordingIndex?: number;
   type?: StageType;
-  transcripts?: {
-    status: TranscriptionStatus;
-    lastSegmentTimestamp: number;
-    subtitleUrl: string;
-    chunks: {
-      start: number;
-      end: number;
-      word: string;
-    }[];
-    text: string;
-  };
+  transcripts?: ITranscript;
+  aiAnalysis?: IAiAnalysis;
   source?: { url: string; m3u8Url: string; type: string };
 }
 
