# packages/server/src/interfaces/transcribe.interface.ts
@@ -1,0 +1,18 @@
+import { ProcessingStatus, TranscriptionStatus } from './state.interface';
+
+export interface ITranscript {
+  status: TranscriptionStatus;
+  subtitleUrl: string;
+  chunks: {
+    start: number;
+    end: number;
+    word: string;
+  }[];
+  text: string;
+  summary: string;
+}
+
+export interface IAiAnalysis {
+  status: ProcessingStatus;
+  isVectorized: boolean;
+}
